Adicionando uma tabela de dados

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,5 +18,16 @@
       <button pButton label="Pesquisar"></button>
     </div>
   </div>
+  <div class="ui-g">
+    <div class="ui-g-12">
+      <p-dataTable [value]="lancamentos">
+        <p-column field="pessoa" header="Pessoa"></p-column>
+        <p-column field="descricao" header="Descrição"></p-column>
+        <p-column field="dataVencimento" header="Data de Vencimento" styleClass="col-data"></p-column>
+        <p-column field="dataPagamento" header="Data de dataPagamento" styleClass="col-data"></p-column>
+        <p-column field="valor" header="Valor" styleClass="col-valor"></p-column>
+      </p-dataTable>
+    </div>
+  </div>
 </div>
 
