--- a/src/styles.css
+++ b/src/styles.css
@@ -17,3 +17,13 @@ label {
   }
 }
 
+.col-valor {
+  width: 120px;
+  text-align: right;
+}
+
+.col-data {
+  width: 120px;
+  text-align: center;
+}
+
