--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -3,6 +3,42 @@
 }
 
 .navbar-toggle {
-
   color: white;
+}
+
+.navbar-menu {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: 210px;
+  margin: 0;
+  z-index: 998;
+  list-style: none;
+  padding: 0;
+
+
+  background-color: #3a3633;
+}
+
+.navbar-usuario {
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #fff;
+  padding: 15px;
+  border-bottom: 1px solid #525151;
+  margin-bottom: 15px;
+}
+
+.navbar-menuitem {
+  padding: 15px;
+}
+
+.navbar-menuitem a {
+  color: #c0bbb7;
+  text-decoration: none;
+}
+
+.navbar-menuitem a:hover {
+  color: #fff;
 }
