--- a/src/app/lancamento-cadastro/lancamento-cadastro.component.html
+++ b/src/app/lancamento-cadastro/lancamento-cadastro.component.html
@@ -6,11 +6,17 @@
       </div>
       <div class="ui-g-6 ui-md-3 ui-fluid">
         <label>Vencimento</label>
-        <input type="text" pInputText>
+        <p-calendar
+          dateFormat="dd/mm/yy"
+          [readonlyInput]="false"
+        ></p-calendar>
       </div>
       <div class="ui-g-6 ui-md-3 ui-fluid">
         <label>Recebimento</label>
-        <input type="text" pInputText>
+        <p-calendar
+          dateFormat="dd/mm/yy"
+          [readonlyInput]="false"
+        ></p-calendar>
       </div>
       <div class="ui-g-12 ui-md-9 ui-fluid">
         <label>Descrição</label>
