Adicionando caixa de seleção (componente Dropdown)

--- a/src/app/lancamento-cadastro/lancamento-cadastro.component.html
+++ b/src/app/lancamento-cadastro/lancamento-cadastro.component.html
@@ -31,13 +31,22 @@
         <label>Valor</label>
         <input type="text" pInputText placeholder="0,00">
       </div>
-      <div class="ui-g-12 ui-fluid">
+      <div class="ui-g-6 ui-fluid">
         <label>Categoria</label>
-        <input type="text" pInputText>
+        <p-dropdown
+          [options]="categorias"
+          [autoWidth]="false"
+          placeholder="selecione"
+        ></p-dropdown>
       </div>
-      <div class="ui-g-12 ui-fluid">
+      <div class="ui-g-6 ui-fluid">
         <label>Pessoa</label>
-        <input type="text" pInputText>
+        <p-dropdown
+          [options]="pessoas"
+          [autoWidth]="false"
+          placeholder="selecione"
+          [filter]="true"
+        ></p-dropdown>
       </div>
       <div class="ui-g-12 ui-fluid">
         <label>Observação</label>
