--- a/src/app/lancamento-cadastro/lancamento-cadastro.component.html
+++ b/src/app/lancamento-cadastro/lancamento-cadastro.component.html
@@ -29,7 +29,7 @@
       </div>
       <div class="ui-g-12 ui-md-3 ui-fluid">
         <label>Valor</label>
-        <input type="text" pInputText placeholder="0,00">
+        <input type="text" pInputText placeholder="0,00" currencyMask [options]="{ prefix: '', thousands: '.', decimal: ',', allowNegative: false }">
       </div>
       <div class="ui-g-6 ui-fluid">
         <label>Categoria</label>
