--- a/src/app/lancamento-cadastro/lancamento-cadastro.component.html
+++ b/src/app/lancamento-cadastro/lancamento-cadastro.component.html
@@ -35,15 +35,10 @@
           minlength="5"
         >
 
-        <div *ngIf="descricao.hasError('required') && descricao.dirty"
-          class="ui-message ui-messages-error">
-          Informe uma Descrição
-        </div>
-        <div *ngIf="descricao.hasError('minlength') && descricao.dirty"
-          class="ui-message ui-messages-error">
-          Minimo de {{ descricao.errors.minlength.requiredLength }} caracteres }}
-        </div>
-
+        <app-message [control]="descricao" error="required"
+          text="Informe uma Descrição"></app-message>
+        <app-message [control]="descricao" error="minlength"
+          text="Minimo de {{ descricao.errors?.minlength?.requiredLength }} caracteres"></app-message>
 
       </div>
       <div class="ui-g-12 ui-md-3 ui-fluid">
