Desafio: controles, validações e mensagens de erro

--- a/src/app/lancamento-cadastro/lancamento-cadastro.component.html
+++ b/src/app/lancamento-cadastro/lancamento-cadastro.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <form>
+  <form #f="ngForm" autocomplete="off">
     <div class="ui-g">
       <div class="ui-g-12">
         <h1>Novo Lançamento</h1>
@@ -14,7 +14,13 @@
         <p-calendar
           dateFormat="dd/mm/yy"
           [readonlyInput]="false"
+          name="vencimento"
+          ngModel
+          #vencimento="ngModel"
+          required
         ></p-calendar>
+        <app-message [control]="vencimento" error="required"
+          text="Informe a data de vencimento"></app-message>
       </div>
       <div class="ui-g-6 ui-md-3 ui-fluid">
         <label>{{ tipo.value === 'RECEITA' ? 'Recebimento' : 'Pagamento' }}</label>
@@ -49,6 +55,7 @@
           currencyMask [options]="{ prefix: '', thousands: '.', decimal: ',', allowNegative: false }"
           ngModel
           name="valor"
+          required
         >
       </div>
       <div class="ui-g-6 ui-fluid">
@@ -57,6 +64,9 @@
           [options]="categorias"
           [autoWidth]="false"
           placeholder="selecione"
+          name="categoria"
+          ngModel
+          required
         ></p-dropdown>
       </div>
       <div class="ui-g-6 ui-fluid">
@@ -66,6 +76,9 @@
           [autoWidth]="false"
           placeholder="selecione"
           [filter]="true"
+          name="pessoa"
+          ngModel
+          required
         ></p-dropdown>
       </div>
       <div class="ui-g-12 ui-fluid">
@@ -73,8 +86,8 @@
         <textarea pInputTextarea rows="3"></textarea>
       </div>
       <div class="ui-g-12">
-        <button type="submit" pButton label="Salvar"></button>
-        <button type="submit" pButton label="Salvar" class="ui-button-info"></button>
+        <button type="submit" pButton label="Salvar" [disabled]="f.invalid"></button>
+        <button type="submit" pButton label="Novo" class="ui-button-info"></button>
         <a href="javascript:;">Voltar para a pesquisa</a>
       </div>
     </div>
