--- a/src/app/pessoa-cadastro/pessoa-cadastro.component.html
+++ b/src/app/pessoa-cadastro/pessoa-cadastro.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <form>
+  <form #f="ngForm" autocomplete="off">
     <div class="ui-g">
       <div class="ui-g-12">
         <h1>Nova Pessoa</h1>
@@ -7,39 +7,127 @@
 
       <div class="ui-g-12 ui-fluid">
         <label>Nome</label>
-        <input type="text" pInputText>
+        <input
+          type="text"
+          pInputText
+          name="nome"
+          ngModel
+          #nome="ngModel"
+          required
+          minlength="5"
+        >
+        <app-message [control]="nome" error="required"
+          text="Informe o nome"></app-message>
+        <app-message [control]="nome" error="minlength"
+          text="Minimo de {{ nome.errors?.minlength?.requiredLength }} caracteres">
+        </app-message>
       </div>
+
       <div class="ui-g-12 ui-md-9 ui-fluid">
         <label>Logradouro</label>
-        <input type="text" pInputText>
+        <input
+          type="text"
+          pInputText
+          name="logradouro"
+          ngModel
+          #logradouro="ngModel"
+          required
+          minlength="3"
+        >
+        <app-message [control]="logradouro" error="required"
+          text="Informe o logradouro"></app-message>
+        <app-message [control]="logradouro" error="minlength"
+          text="Minimo de {{ logradouro.errors?.minlength?.requiredLength }} caracteres">
+        </app-message>
       </div>
+
       <div class="ui-g-12 ui-md-3 ui-fluid">
         <label>Número</label>
-        <input type="text" pInputText>
+        <input
+          type="text"
+          pInputText
+          name="numero"
+          ngModel
+          #numero="ngModel"
+          required
+        >
+        <app-message [control]="numero" error="required"
+          text="Informe o Número"></app-message>
+
       </div>
+
       <div class="ui-g-12 ui-md-4 ui-fluid">
         <label>Complemento</label>
         <input type="text" pInputText>
       </div>
+
       <div class="ui-g-12 ui-md-4 ui-fluid">
         <label>Bairro</label>
-        <input type="text" pInputText>
+        <input
+          type="text"
+          pInputText
+          name="bairro"
+          ngModel
+          #bairro="ngModel"
+          required
+          minlength="2"
+        >
+        <app-message [control]="bairro" error="required"
+          text="Informe o Bairro"></app-message>
+        <app-message [control]="bairro" error="minlength"
+          text="Minimo de {{ bairro.errors?.minlength?.requiredLength }} caracteres"></app-message>
       </div>
+
       <div class="ui-g-12 ui-md-4 ui-fluid">
         <label>CEP</label>
-        <p-inputMask mask="99.999-999"></p-inputMask>
+        <p-inputMask
+           mask="99.999-999"
+           name="cep"
+           ngModel
+           #cep="ngModel"
+           required
+          ></p-inputMask>
+          <app-message [control]="cep" error="required"
+            text="Informe o CEP"></app-message>
       </div>
+
       <div class="ui-g-12 ui-md-6 ui-fluid">
         <label>Cidade</label>
-        <input type="text" pInputText>
+        <input
+          type="text"
+          pInputText
+          name="cidade"
+          ngModel
+          #cidade="ngModel"
+          required
+          minlength="2"
+        >
+        <app-message [control]="cidade" error="required"
+          text="Informe o Cidade"></app-message>
+        <app-message [control]="cidade" error="minlength"
+          text="Minimo de {{ cidade.errors?.minlength?.requiredLength }} caracteres"></app-message>
       </div>
+
       <div class="ui-g-12 ui-md-6 ui-fluid">
         <label>Estado</label>
-        <input type="text" pInputText>
+        <input
+          type="text"
+          pInputText
+          name="estado"
+          ngModel
+          #estado="ngModel"
+          required
+          minlength="2"
+        >
+        <app-message [control]="estado" error="required"
+          text="Informe o Estado"></app-message>
+        <app-message [control]="estado" error="minlength"
+          text="Minimo de {{ estado.errors?.minlength?.requiredLength }} caracteres"></app-message>
       </div>
+
       <div class="ui-g-12">
-        <button type="submit" pButton label="Salvar"></button>
-        <button type="submit" pButton label="Salvar" class="ui-button-info"></button>
+        <button type="submit" pButton label="Salvar" [disabled]="f.invalid"></button>
+        <button type="submit" pButton label="Novo" class="ui-button-info"></button>
         <a href="javascript:;">Voltar para a pesquisa</a>
       </div>
     </div>
