--- a/src/app/pessoas/pessoa-cadastro/pessoa-cadastro.component.html
+++ b/src/app/pessoas/pessoa-cadastro/pessoa-cadastro.component.html
@@ -16,11 +16,11 @@
           required
           minlength="5"
         >
-        <!--<app-message [control]="nome" error="required"
+        <app-message [control]="nome" error="required"
           text="Informe o nome"></app-message>
         <app-message [control]="nome" error="minlength"
           text="Minimo de {{ nome.errors?.minlength?.requiredLength }} caracteres">
-        </app-message>-->
+        </app-message>
       </div>
 
       <div class="ui-g-12 ui-md-9 ui-fluid">
@@ -34,11 +34,11 @@
           required
           minlength="3"
         >
-        <!--<app-message [control]="logradouro" error="required"
+        <app-message [control]="logradouro" error="required"
           text="Informe o logradouro"></app-message>
         <app-message [control]="logradouro" error="minlength"
           text="Minimo de {{ logradouro.errors?.minlength?.requiredLength }} caracteres">
-        </app-message>-->
+        </app-message>
       </div>
 
       <div class="ui-g-12 ui-md-3 ui-fluid">
@@ -51,8 +51,8 @@
           #numero="ngModel"
           required
         >
-        <!--<app-message [control]="numero" error="required"
-          text="Informe o Número"></app-message>-->
+        <app-message [control]="numero" error="required"
+          text="Informe o Número"></app-message>
 
       </div>
 
@@ -72,10 +72,10 @@
           required
           minlength="2"
         >
-        <!--<app-message [control]="bairro" error="required"
+        <app-message [control]="bairro" error="required"
           text="Informe o Bairro"></app-message>
         <app-message [control]="bairro" error="minlength"
-          text="Minimo de {{ bairro.errors?.minlength?.requiredLength }} caracteres"></app-message>-->
+          text="Minimo de {{ bairro.errors?.minlength?.requiredLength }} caracteres"></app-message>
       </div>
 
       <div class="ui-g-12 ui-md-4 ui-fluid">
@@ -87,8 +87,8 @@
            #cep="ngModel"
            required
           ></p-inputMask>
-          <!--<app-message [control]="cep" error="required"
-            text="Informe o CEP"></app-message>-->
+          <app-message [control]="cep" error="required"
+            text="Informe o CEP"></app-message>
       </div>
 
       <div class="ui-g-12 ui-md-6 ui-fluid">
@@ -102,10 +102,10 @@
           required
           minlength="2"
         >
-        <!--<app-message [control]="cidade" error="required"
+        <app-message [control]="cidade" error="required"
           text="Informe o Cidade"></app-message>
         <app-message [control]="cidade" error="minlength"
-          text="Minimo de {{ cidade.errors?.minlength?.requiredLength }} caracteres"></app-message>-->
+          text="Minimo de {{ cidade.errors?.minlength?.requiredLength }} caracteres"></app-message>
       </div>
 
       <div class="ui-g-12 ui-md-6 ui-fluid">
@@ -119,10 +119,10 @@
           required
           minlength="2"
         >
-        <!--<app-message [control]="estado" error="required"
+        <app-message [control]="estado" error="required"
           text="Informe o Estado"></app-message>
         <app-message [control]="estado" error="minlength"
-          text="Minimo de {{ estado.errors?.minlength?.requiredLength }} caracteres"></app-message>-->
+          text="Minimo de {{ estado.errors?.minlength?.requiredLength }} caracteres"></app-message>
       </div>
 
       <div class="ui-g-12">
