--- a/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -12,10 +12,20 @@
       </div>
       <div class="ui-g-12">
         <label style="display: block">Vencimento</label>
-        <input pInputText type="text" style="width: 95px">
+        <p-calendar
+          dateFormat="dd/mm/yy"
+          [inputStyle]="{ width: '95px'}"
+          name="vencimentoInicio"
+          [(ngModel)]="dataVencimentoInicio"
+        ></p-calendar>
 
         <label>até</label>
-        <input pInputText type="text" style="width: 95px">
+        <p-calendar
+          dateFormat="dd/mm/yy"
+          [inputStyle]="{ width: '95px'}"
+          name="vencimentoFim"
+          [(ngModel)]="dataVencimentoFim"
+        ></p-calendar>
       </div>
       <div class="ui-g-12">
         <button pButton type="submit" label="Pesquisar"></button>
@@ -25,7 +35,7 @@
   <div class="ui-g">
 
 <div class="ui-g-12">
-    <p-dataTable [value]="lancamentos" [paginator]="true" [rows]="5" [responsive]="true">
+    <p-dataTable [value]="lancamentos" [paginator]="true" [rows]="5" [responsive]="true" emptyMessage="Nenhum Lançamento Encontrado">
       <p-column field="pessoa" header="Pessoa"></p-column>
       <p-column field="descricao" header="Descrição"></p-column>
       <p-column field="dataVencimento" header="Data de Vencimento" styleClass="col-data">
