--- a/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -8,7 +8,7 @@
       </div>
       <div class="ui-g-12 ui-fluid">
         <label>Descrição</label>
-        <input pInputText type="text" name="descricao" [(ngModel)]="descricao">
+        <input pInputText type="text" name="descricao" [(ngModel)]="filtro.descricao">
       </div>
       <div class="ui-g-12">
         <label style="display: block">Vencimento</label>
@@ -16,7 +16,7 @@
           dateFormat="dd/mm/yy"
           [inputStyle]="{ width: '95px'}"
           name="vencimentoInicio"
-          [(ngModel)]="dataVencimentoInicio"
+          [(ngModel)]="filtro.dataVencimentoInicio"
         ></p-calendar>
 
         <label>até</label>
@@ -24,7 +24,7 @@
           dateFormat="dd/mm/yy"
           [inputStyle]="{ width: '95px'}"
           name="vencimentoFim"
-          [(ngModel)]="dataVencimentoFim"
+          [(ngModel)]="filtro.dataVencimentoFim"
         ></p-calendar>
       </div>
       <div class="ui-g-12">
