Adicionando diálogo de confirmação antes da exclusão

--- a/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -72,7 +72,7 @@
             icon="fa-trash"
             pTooltip="Excluir"
             tooltipPosition="top"
-            (click)="excluir(lanc)"
+            (click)="confirmarExclusao(lanc)"
           ></button>
         </ng-template>
       </p-column>
