--- a/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
+++ b/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
@@ -26,6 +26,7 @@
         [lazy]="true"
         [totalRecords]="totalRegistros"
         (onLazyLoad)="aoMudarPagina($event)"
+        #tabela
         [responsive]="true"
         emptyMessage="Nenhuma Pessoa Encontrada"
       >
@@ -41,9 +42,14 @@
           </ng-template>
         </p-column>
         <p-column styleClass="col-acoes">
-          <ng-template pTemplate="body">
+          <ng-template let-pes="rowData" pTemplate="body">
             <a pButton icon="fa-pencil" pTooltip="Editar" tooltipPosition="top"></a>
-            <button pButton icon="fa-trash" pTooltip="Excluir" tooltipPosition="top"></button>
+            <button 
+              pButton icon="fa-trash" 
+              pTooltip="Excluir" 
+              tooltipPosition="top"
+              (click)="confirmarExclusao(pes)"
+            ></button>
           </ng-template>
         </p-column>
     </p-dataTable>
