--- a/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
+++ b/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
@@ -36,7 +36,7 @@
         <p-column field="ativo" header="Status">
           <ng-template let-pes="rowData" pTemplate="body">
               <a href="javascript:;" [pTooltip]="pes.ativo ? 'Desativar' : 'Ativar'"
-                  tooltipPosition="top">
+                  tooltipPosition="top" (click)="alternarStatus(pes)">
                 {{ pes.ativo ? 'Ativo' : 'Inativo' }}
               </a>
           </ng-template>
