--- a/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
+++ b/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
@@ -1,12 +1,17 @@
 <div class="container">
-  <form #f="ngForm" autocomplete="off">
+  <form #f="ngForm" autocomplete="off" (ngSubmit)="salvar(f)">
     <div class="ui-g">
       <div class="ui-g-12">
         <h1>Novo Lançamento</h1>
       </div>
 
       <div class="ui-g-12">
-        <p-selectButton [options]="tipos" #tipo></p-selectButton>
+        <p-selectButton 
+          [options]="tipos" 
+          #tipo
+          [(ngModel)]="lancamento.tipo"
+          name="tipo"
+        ></p-selectButton>
       </div>
 
       <div class="ui-g-6 ui-md-3 ui-fluid">
@@ -15,7 +20,7 @@
           dateFormat="dd/mm/yy"
           [readonlyInput]="false"
           name="vencimento"
-          ngModel
+          [(ngModel)]="lancamento.dataVencimento"
           #vencimento="ngModel"
           required
         ></p-calendar>
@@ -26,7 +31,9 @@
         <label>{{ tipo.value === 'RECEITA' ? 'Recebimento' : 'Pagamento' }}</label>
         <p-calendar
           dateFormat="dd/mm/yy"
+          [(ngModel)]="lancamento.dataPagamento"
           [readonlyInput]="false"
+          name="dataPagamento"
         ></p-calendar>
       </div>
       <div class="ui-g-12 ui-md-9 ui-fluid">
@@ -35,7 +42,7 @@
           type="text"
           pInputText
           name="descricao"
-          ngModel
+          [(ngModel)]="lancamento.descricao"
           #descricao="ngModel"
           required
           minlength="5"
@@ -53,7 +60,7 @@
           type="text"
           pInputText placeholder="0,00"
           currencyMask [options]="{ prefix: '', thousands: '.', decimal: ',', allowNegative: false }"
-          ngModel
+          [(ngModel)]="lancamento.valor"
           name="valor"
           required
         >
@@ -65,7 +72,7 @@
           [autoWidth]="false"
           placeholder="selecione"
           name="categoria"
-          ngModel
+          [(ngModel)]="lancamento.categoria"
           required
         ></p-dropdown>
       </div>
@@ -77,13 +84,13 @@
           placeholder="selecione"
           [filter]="true"
           name="pessoa"
-          ngModel
+          [(ngModel)]="lancamento.pessoa"
           required
         ></p-dropdown>
       </div>
       <div class="ui-g-12 ui-fluid">
         <label>Observação</label>
-        <textarea pInputTextarea rows="3"></textarea>
+        <textarea pInputTextarea rows="3" name="observacao" [(ngModel)]="lancamento.observacao" ></textarea>
       </div>
       <div class="ui-g-12">
         <button type="submit" pButton label="Salvar" [disabled]="f.invalid"></button>
