--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,6 @@
 <app-navbar></app-navbar>
-<app-lancamento-cadastro></app-lancamento-cadastro>
-<!--
-    <app-lancamentos-pesquisa></app-lancamentos-pesquisa>
-    <app-lancamento-cadastro></app-lancamento-cadastro>
-    
-    <app-pessoa-cadastro></app-pessoa-cadastro>
-    <app-lancamentos-pesquisa></app-lancamentos-pesquisa>
--->
+
+<router-outlet></router-outlet>
 
 <ng2-toasty></ng2-toasty>
 <p-confirmDialog 
