--- a/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
+++ b/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
@@ -95,7 +95,7 @@
       <div class="ui-g-12">
         <button type="submit" pButton label="Salvar" [disabled]="f.invalid"></button>
         <button type="submit" pButton label="Novo" class="ui-button-info"></button>
-        <a href="javascript:;">Voltar para a pesquisa</a>
+        <a routerLink="/lancamentos">Voltar para a pesquisa</a>
       </div>
     </div>
   </form>
