--- a/src/app/core/navbar/navbar.component.css
+++ b/src/app/core/navbar/navbar.component.css
@@ -34,6 +34,10 @@
   padding: 15px;
 }
 
+.navbar-menuitem.ativo {
+  background-color: #494541
+}
+
 .navbar-menuitem a {
   color: #c0bbb7;
   text-decoration: none;
