--- a/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
+++ b/src/app/lancamentos/lancamento-cadastro/lancamento-cadastro.component.html
@@ -94,7 +94,8 @@
       </div>
       <div class="ui-g-12">
         <button type="submit" pButton label="Salvar" [disabled]="f.invalid"></button>
-        <button type="submit" pButton label="Novo" class="ui-button-info"></button>
+        <button type="button" pButton label="Novo" class="ui-button-info" 
+          (click)="novo(f)"></button>
         <a routerLink="/lancamentos">Voltar para a pesquisa</a>
       </div>
     </div>
